--- a/style.css
+++ b/style.css
@@ -521,14 +521,11 @@ a {
 	color: royalblue;
 }
 
-a:visited {
-	color: purple;
-}
+a:visited {}
 
 a:hover,
 a:focus,
 a:active {
-	color: midnightblue;
 }
 
 a:focus {
